--- a/templates/communitey.html
+++ b/templates/communitey.html
@@ -2,9 +2,28 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> Serve and Connect</title>
+    <link href="https://fonts.googleapis.com/css?family=Farsan" rel="stylesheet"/>
+    <link rel="stylesheet" href="../css/community.css"/>
+
+    <style>
+     body {
+       background-color: #ABEBC6
+     }
+   </style>
   </head>
   <body>
+
+    <!--<div class="topnav">
+    <a class="active" href="/">Community | </a>
+    <a href="friends"> Friends | </a>
+    <a href="profile"> Profile</a>
+  </div> -->
+
+
+  <div class="topbar">
+    
+    <a href = "profile"> Profile </a> <a href ="friends"> Friends  </a><a>  <b> Community   </b></a>
 
   </body>
 </html>
