added other pages

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
-  
+    <form method="post">
+      Zip Code: <input class="LocationPage" name="zipcode" /><br/>
+      <button>Submit</button>
+    </form>
   </body>
 </html>
