--- a/templates/community.html
+++ b/templates/community.html
@@ -8,7 +8,7 @@
 
     <style>
      body {
-       background-color: #ABEBC6
+       background-color: #F2F3F4
      }
    </style>
   </head>
@@ -22,7 +22,7 @@
 
 
   <div class="topbar">
-    
+
     <a href = "profile"> Profile </a> <a href ="friends"> Friends  </a><a>  <b> Community   </b></a>
 
   </body>
