--- a/templates/community.html
+++ b/templates/community.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title> Serve and Connect</title>
     <link href="https://fonts.googleapis.com/css?family=Farsan" rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/community.css"/>
+    <link rel="stylesheet" href="community.css"/>
 
     <style>
      body {
