--- a/templates/friends.html
+++ b/templates/friends.html
@@ -5,6 +5,8 @@
     <title></title>
   </head>
   <body>
+    <div class="topbar">
+    <a href = "profile"> Profile </a> <a><b> Friends  </a></b> <a<a href ="community"> Community </a>
 
   </body>
 </html>
