--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,9 +2,24 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> Serve and Connect</title>
+    <link href="https://fonts.googleapis.com/css?family=Farsan" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/profile.css"/>
+    <style>
+     body {
+       background-color: #F2F3F4
+     }
+    </style>
   </head>
   <body>
-    
+    <div class="topbar">
+    <a><b> Profile </a></b>  <a href ="friends">Friends </a> <a href ="community"> Community </a>
+
   </body>
 </html>
+
+
+
+
+
+\
