--- a/templates/community.html
+++ b/templates/community.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title> Serve and Connect</title>
     <link href="https://fonts.googleapis.com/css?family=Farsan" rel="stylesheet"/>
-    <link rel="stylesheet" href="community.css"/>
+    <link rel="stylesheet" href="css/community.css"/>
 
     <style>
      body {
@@ -14,15 +14,7 @@
   </head>
   <body>
 
-    <!--<div class="topnav">
-    <a class="active" href="/">Community | </a>
-    <a href="friends"> Friends | </a>
-    <a href="profile"> Profile</a>
-  </div> -->
-
-
-  <div class="topbar">
-
+    <div class="topbar">
     <a href = "profile"> Profile </a> <a href ="friends"> Friends  </a><a>  <b> Community   </b></a>
 
   </body>
