--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,10 @@
     <title>Serve + Connect</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="../css/custom.css" rel="stylesheet">
 
     <!-- Custom Fonts from Google -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -29,7 +29,7 @@
             <div class="navbar-header">
 
                 <a class="navbar-brand" href="#">
-                	<span class="glyphicon glyphicon-fire"></span>
+                	
                 	SERVE + CONNECT
                 </a>
             </div>
@@ -90,8 +90,8 @@
         <div class="contact">
         	<div class="container">
 				<h2 class="section-heading">Contact Us</h2>
-				<p><span class="glyphicon glyphicon-earphone"></span><br> +1(23) 456 7890</p>
-				<p><span class="glyphicon glyphicon-envelope"></span><br> info@example.com</p>
+				<p> +1(23) 456 7890</p>
+				<p> info@example.com</p>
         	</div>
         </div>
 
@@ -106,14 +106,14 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="../js/jquery-1.11.3.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
 
     <!-- Custom Javascript -->
-    <script src="js/custom.js"></script>
+    <script src="../js/custom.js"></script>
 
 </body>
 
