--- a/templates/community.html
+++ b/templates/community.html
@@ -2,20 +2,69 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Serve and Connect</title>
-    <link href="https://fonts.googleapis.com/css?family=Farsan" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Serve and Connect Community</title>
     <link rel="stylesheet" href="css/community.css"/>
+    <!-- Bootstrap Core CSS -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-    <style>
-     body {
-       background-color: #F2F3F4
-     }
-   </style>
+    <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
+    <link href="../css/custom.css" rel="stylesheet">
+
+    <!-- Custom Fonts from Google -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   </head>
-  <body>
 
-    <div class="topbar">
-    <a href = "profile"> Profile </a> <a href ="friends"> Friends  </a><a>  <b> Community   </b></a>
+
+  <body>
+    <!-- Navigation -->
+    <nav id="siteNav" class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Logo and responsive toggle -->
+            <div class="navbar-header">
+
+                <a class="navbar-brand" href="#">
+
+                	SERVE + CONNECT
+                </a>
+            </div>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active">
+                        <a href="#">Community</a>
+                    </li>
+                    <li>
+                        <a href="#">Friends</a>
+                    </li>
+                    <li>
+                        <a href="#">Profile</a>
+                    </li>
+                </ul>
+
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container -->
+      </nav>
+
+    <footer class="page-footer">
+        <div class="small-print">
+          <div class="container">
+            <p>Team 405 Error:</br>
+              Erik, Jordan, Lina</p>
+          </div>
+        </div>
+
+    </footer>
+
+    <!-- jQuery -->
+    <script src="../js/jquery-1.11.3.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../js/bootstrap.min.js"></script>
+
+
+    <!-- Custom Javascript -->
+    <script src="../js/custom.js"></script>
 
   </body>
 </html>
