--- a/templates/community.html
+++ b/templates/community.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Serve and Connect Community</title>
-    <link rel="stylesheet" href="css/community.css"/>
+    <link rel="stylesheet" href="../css/community.css"/>
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
-    <link href="../css/custom.css" rel="stylesheet">
 
     <!-- Custom Fonts from Google -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -45,6 +43,14 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
       </nav>
+
+      <header class= "community_bg">
+          <div class="header-content">
+              <div class="header-content-inner">
+                  <h1>Volunteer Opportunities</h1>
+              </div>
+          </div>
+      </header>
 
     <footer class="page-footer">
         <div class="small-print">
