--- a/templates/community.html
+++ b/templates/community.html
@@ -21,8 +21,7 @@
             <!-- Logo and responsive toggle -->
             <div class="navbar-header">
 
-                <a class="navbar-brand" href="#">
-
+                <a class="navbar-brand" href="index.html">
                 	SERVE + CONNECT
                 </a>
             </div>
@@ -30,13 +29,13 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active">
-                        <a href="#">Community</a>
+                        <a><b>Community</b>x</a>
                     </li>
                     <li>
-                        <a href="#">Friends</a>
+                        <a href="friends.html">Friends</a>
                     </li>
                     <li>
-                        <a href="#">Profile</a>
+                        <a href="profile.html">Profile</a>
                     </li>
                 </ul>
 
