--- a/templates/index.html
+++ b/templates/index.html
@@ -37,13 +37,13 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active">
-                        <a href="community">Community</a>
+                        <a href="community.html">Community</a>
                     </li>
                     <li>
-                        <a href="friends">Friends</a>
+                        <a href="friends.html">Friends</a>
                     </li>
                     <li>
-                        <a href="profile">Profile</a>
+                        <a href="profile.html">Profile</a>
                     </li>
                 </ul>
 
