--- a/templates/community.html
+++ b/templates/community.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active">
-                        <a><b>Community</b>x</a>
+                        <a><b>Community</b></a>
                     </li>
                     <li>
                         <a href="friends.html">Friends</a>
