--- a/templates/community.html
+++ b/templates/community.html
@@ -3,28 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Serve and Connect Community</title>
+    <title> Serve + Connect Community</title>
     <link rel="stylesheet" href="../css/community.css"/>
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-
-    <!-- Custom Fonts from Google -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   </head>
 
 
   <body>
     <!-- Navigation -->
-    <nav id="siteNav" class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav id="siteNav" class="navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <!-- Logo and responsive toggle -->
-            <div class="navbar-header">
-
+            <!-- Logo -->
                 <a class="navbar-brand" href="index.html">
                 	SERVE + CONNECT
                 </a>
-            </div>
+
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
