--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,6 @@
     <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
     <link href="../css/custom.css" rel="stylesheet">
 
-    <!-- Custom Fonts from Google -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
 </head>
@@ -23,16 +22,15 @@
 <body>
 
     <!-- Navigation -->
-    <nav id="siteNav" class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav id="siteNav" class="navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <!-- Logo and responsive toggle -->
-            <div class="navbar-header">
+            <!-- Logo -->
 
                 <a class="navbar-brand" href="#">
 
                 	SERVE + CONNECT
                 </a>
-            </div>
+
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
