changes by lina

--- a/templates/friends.html
+++ b/templates/friends.html
@@ -2,19 +2,70 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Serve and Connect</title>
-    <link href="https://fonts.googleapis.com/css?family=Farsan" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Serve + Connect Community</title>
     <link rel="stylesheet" href="../css/friends.css"/>
+    <!-- Bootstrap Core CSS -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-    <style>
-     body {
-       background-color: #F2F3F4
-     }
-   </style>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   </head>
+
+
   <body>
-    <div class="topbar">
-    <a href = "profile"> Profile </a> <a><b> Friends  </a></b> <a href ="community"> Community </a>
+    <!-- Navigation -->
+    <nav id="siteNav" class="navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Logo -->
+                <a class="navbar-brand" href="index.html">
+                	SERVE + CONNECT
+                </a>
+
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="community.html">Community</a>
+                    </li>
+                    <li class="active">
+                        <a href="friends.html"><b>Friends</b></a>
+                    </li>
+                    <li>
+                        <a href="profile.html">Profile</a>
+                    </li>
+                </ul>
+
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container -->
+      </nav>
+
+      <header class= "community_bg">
+          <div class="header-content">
+              <div class="header-content-inner">
+                  <h1>Friends</h1>
+              </div>
+          </div>
+      </header>
+
+    <footer class="page-footer">
+        <div class="small-print">
+          <div class="container">
+            <p>Team 405 Error:</br>
+              Erik, Jordan, Lina</p>
+          </div>
+        </div>
+
+    </footer>
+
+    <!-- jQuery -->
+    <script src="../js/jquery-1.11.3.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../js/bootstrap.min.js"></script>
+
+
+    <!-- Custom Javascript -->
+    <script src="../js/custom.js"></script>
 
   </body>
 </html>
