--- a/templates/login.html
+++ b/templates/login.html
@@ -1,71 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Serve + Connect</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="../css/login.css"/>
-</head>
-
-<body>
-
-
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-red barshadow w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Community</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Friends</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Profile</a>
-  </div>
-</div>
-
-<!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">Serve + Connect</h1>
-  <p class="w3-xlarge">From Compassion to Action</p>
-  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Log In</button>
-</header>
-
-<!-- First Grid -->
-<div class="w3-row-padding w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-twothird">
-      <h1>About Us</h1>
-      <h5 class="w3-padding-32">We believe everyone should have the chance to make a difference. That's why we make it easy for good people and good causes to connect.</h5>
-    </div>
-
-    <div class="w3-third w3-center">
-      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
-    </div>
-  </div>
-</div>
-
-<!-- Second Grid -->
-<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-third w3-center">
-      <i class="w3-padding-64 w3-text-red w3-margin-right"></i>
-    </div>
-
-    <div class="w3-twothird">
-      <h1>Help make a difference in the world!</h1>
-      <h5 class="w3-padding-32">Search for community service opportunities in you area by simply logging in and adding your zip code. You can connect with friends in your area and share each other what you all have accomplished!</h5>
-
-    </div>
-  </div>
-</div>
-
-
-
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity">
-
- <p>Contact us!</p>
-</footer>
-
-
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <section id="banner">
+            <ul class="actions special">
+              {% if user %}
+                <a href="{{log_url}}">Log Out</a>
+              {% else %}
+                <a href="{{log_url}}">Log In</a>
+              {% endif %}
+            </ul>
+        </section>
+  </body>
 </html>
