--- a/templates/community.html
+++ b/templates/community.html
@@ -17,7 +17,7 @@
     <nav id="siteNav" class="navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Logo -->
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="home.html">
                 	SERVE + CONNECT
                 </a>
 
