--- a/templates/home.html
+++ b/templates/home.html
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <img class="img-responsive img-circle center-block" src="images/Volunteer_hands.jpg" alt="">
+                    <img class="img-responsive img-circle center-block" src="../templates/images/Volunteer_hands.jpg" alt="">
                 </div>
                 <div class="col-sm-6">
                 	<h2 class="section-header">More people.</br>More impact.</h2>
@@ -104,7 +104,7 @@
         <!-- Copyright etc -->
         <div class="small-print">
         	<div class="container">
-        		<p>Team 405 Error:</br>
+        		<p>Team Git Coding:</br>
               Erik, Jordan, Lina</p>
         	</div>
         </div>
