changes by lina

--- a/templates/community.html
+++ b/templates/community.html
@@ -17,7 +17,7 @@
     <nav id="siteNav" class="navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Logo -->
-                <a class="navbar-brand" href="home.html">
+                <a class="navbar-brand" href="home">
                 	SERVE + CONNECT
                 </a>
 
@@ -28,10 +28,10 @@
                         <a><b>Community</b></a>
                     </li>
                     <li>
-                        <a href="friends.html">Friends</a>
+                        <a href="friends">Friends</a>
                     </li>
                     <li>
-                        <a href="profile.html">Profile</a>
+                        <a href="profile">Profile</a>
                     </li>
                 </ul>
 
