--- a/templates/friends.html
+++ b/templates/friends.html
@@ -17,7 +17,7 @@
     <nav id="siteNav" class="navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Logo -->
-                <a class="navbar-brand" href="home.html">
+                <a class="navbar-brand" href="home">
                 	SERVE + CONNECT
                 </a>
 
@@ -25,13 +25,13 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="community.html">Community</a>
+                        <a href="community">Community</a>
                     </li>
                     <li class="active">
-                        <a href="friends.html"><b>Friends</b></a>
+                        <a href="friends"><b>Friends</b></a>
                     </li>
                     <li>
-                        <a href="profile.html">Profile</a>
+                        <a href="profile">Profile</a>
                     </li>
                 </ul>
 
