--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,5 +15,25 @@
     <div class="topbar">
     <a><b> Profile </a></b>  <a href ="friends">Friends </a> <a href ="community"> Community </a>
 
+    <ul>
+      <li><a href="#">Log In</a></li>
+    <ul>
+
+            </header>
+            <section class="wrapper style5">
+              <div class="inner">
+                <p>Name: {{user.nickname}}</p>
+                <p>Email: {{user.email}}</p>
+                {% if user.bio %}
+                  <p>{{user.bio}}</p>
+                {% else %}
+                  <form method="POST">
+                    <input name = "bio" placeholder = "Bio" type = "text"></br>
+                    <button>Submit</button>
+                  </form>
+                {% endif %}
+              </div>
+            </section>
+
   </body>
 </html>
