changes by lina p

--- a/templates/home.html
+++ b/templates/home.html
@@ -59,9 +59,9 @@
              <form method='get' id='login'>
                  <a href="login" class="btn btn-primary btn-lg">Sign in</a></div>
                  {% if user %}
-                  <a href='{{url}}'>logged in test</a>
+                  <a href='{{url}}'>logged in</a>
                     {% else %}
-                  <a href='{{url}}'>logged out test</a>
+                  <a href='{{url}}'>logged out</a>
                     {% endif %}
             </form>
             </div>
