--- a/templates/friends.html
+++ b/templates/friends.html
@@ -50,7 +50,7 @@
     <footer class="page-footer">
         <div class="small-print">
           <div class="container">
-            <p>Team 405 Error:</br>
+            <p>Team Git Coding:</br>
               Erik, Jordan, Lina</p>
           </div>
         </div>
