--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
+    <form method = "POST">
+      Full name: <input name = "fullname"/><br/>
+    </form>
     <section id="banner">
             <ul class="actions special">
               {% if user %}
