--- a/templates/post.html
+++ b/templates/post.html
@@ -8,10 +8,10 @@
     <h1>Recent Searches</h1>
     <ul>
 
-      <form>
+      <form method="post">
         Event: <input name=post_event />
       </br>
-        Location: <input name=post_location  /> Time: <input name=post_time />
+        Location: <input name=post_location  /> Picture Id: <input name=picture_id />
       </br>
         <button>Post</button>
 
