--- a/templates/home.html
+++ b/templates/home.html
@@ -58,9 +58,9 @@
 
              <form method='get' id='login'>
 
-                 <a href="{{log_url}}" class="btn btn-primary btn-lg">Sign in</a></div>
+                 <a href="{{log_url}}" class="btn btn-primary btn-lg">{{log_message}}</a></div>
 
-                  <a href='{{url}}'>log out</a>
+                  <!--<a href='{{url}}'>log out</a>-->
 
             </form>
             </div>
