--- a/templates/post.html
+++ b/templates/post.html
@@ -9,9 +9,8 @@
     <ul>
 
       <form method="post">
-        Event: <input name=post_event />
-      </br>
-        Location: <input name=post_location  /> Picture Id: <input name=picture_id />
+       Event Name: <input name=post_name />  Location: <input name=post_location  />
+        Event Description: <input name=post_event />
       </br>
         <button>Post</button>
 
