fixed the volunteer hands images

--- a/templates/home.html
+++ b/templates/home.html
@@ -75,7 +75,7 @@
             <div class="row">
                 <div class="col-sm-6">
                     <img class="img-responsive img-circle center-block" src="
-                    images/Volunteer_hands.jpg" alt="">
+                    ../templates/images/Volunteer_hands.jpg" alt="">
                 </div>
                 <div class="col-sm-6">
                 	<h2 class="section-header">More people.</br>More impact.</h2>
