--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <link rel="shortcut icon" type="image/png" href="template/images/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="../templates/images/favicon.ico"/>
     <title>Serve + Connect</title>
 
     <!-- Bootstrap Core CSS -->
