--- a/templates/post.html
+++ b/templates/post.html
@@ -9,7 +9,8 @@
     <ul>
 
       <form method="post">
-       Event Name: <input name=post_name />  Location: <input name=post_location  />
+       Event Name: <input name=post_name />  
+       Location: <input name=post_location  />
         </br>
           Event Description: <input name=post_event />
       </br>
