--- a/templates/profile.html
+++ b/templates/profile.html
@@ -49,6 +49,12 @@
           </div>
       </header>
 
+      <section class="content">
+          <div class="container">
+            <a href="/post" class="btn btn-primary btn-lg">Post Your Experience!</a>
+          </div>
+      </section>
+
     <footer class="page-footer">
         <div class="small-print">
           <div class="container">
