--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Serve + Connect Profile</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../templates/images/favicon.ico"/>
     <link rel="stylesheet" href="../css/profile.css"/>
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +39,10 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
       </nav>
-
+    <div class="row">
+      <div class="column" style={{"upload_image"}}>
+      </div>
+      <div class="column" style="">
       <header class= "community_bg">
           <div class="header-content">
               <div class="header-content-inner">
