--- a/templates/post.html
+++ b/templates/post.html
@@ -3,13 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="shortcut icon" type="image/x-icon" href="../templates/images/favicon.ico"/>
   </head>
   <body>
-    <h1>Recent Searches</h1>
+    <div class="collapse navbar-collapse" id="navbar">
+        <ul class="nav navbar-nav navbar-right">
+            <li class="active">
+                <a><b>Community</b></a>
+            </li>
+            <li>
+                <a href="friends">Friends</a>
+            </li>
+            <li>
+                <a href="profile">Profile</a>
+            </li>
+        </ul>
+
+    </div><!-- /.navbar-collapse -->
+</div><!-- /.container -->
+</nav>
+    <h1> Share Your Experience </h1>
     <ul>
 
       <form method="post">
-       Event Name: <input name=post_name />  
+       Event Name: <input name=post_name />
        Location: <input name=post_location  />
         </br>
           Event Description: <input name=post_event />
