--- a/templates/friends.html
+++ b/templates/friends.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Serve + Connect Community</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../templates/images/favicon.ico"/>
     <link rel="stylesheet" href="../css/friends.css"/>
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
