--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="shortcut icon" type="image/x-icon" href="../templates/images/favicon.ico"/>
   </head>
   <body>
     <form method = "POST">
