add post title to post page

--- a/templates/post.html
+++ b/templates/post.html
@@ -42,6 +42,7 @@
       <header class= "community_bg">
           <div class="header-content">
               <div class="header-content-inner">
+                  <h1>Post Page</h1>
                   <p>Share your volunteer experience below!</p>
               </div>
           </div>
