--- a/templates/profile.html
+++ b/templates/profile.html
@@ -39,7 +39,7 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
       </nav>
-    
+
       <header class= "community_bg">
           <div class="header-content">
               <div class="header-content-inner">
@@ -54,6 +54,10 @@
           <div class="container">
             <a href="/post" class="btn btn-primary btn-lg">Post Your Experience!</a>
           </div>
+      </section>
+
+      <section>
+        {{post_date}}
       </section>
 
     <footer class="page-footer">
