--- a/css/post.css
+++ b/css/post.css
@@ -1,7 +1,19 @@
 
+input{
+  width= 100%;
+  padding-left:: 30px;
+  padding-right: 80px;
+  padding-top: 20px;
+  background-color:#d0dffc;
+  box-sizing: border-box;
+  border: 2px, solid, white;
+  border-radius: 10px;
+  font-size: 18px;
+}
+
 legend {
-    background-color: #000;
-    color: #fff;
+    background-color: white;
+    color: white;
     padding: 3px 6px;
 }
 
@@ -13,7 +25,7 @@ label {
     margin-top: 1rem;
     display: block;
     font-size: .8rem;
-
+}
 html,
 body {
     width: 100%;
