--- a/css/profile.css
+++ b/css/profile.css
@@ -1,3 +1,37 @@
+#avatar{
+  
+}
+input{
+  width= 100%;
+  padding-left:: 30px;
+  padding-right: 80px;
+  padding-top: 20px;
+  background-color:#d0dffc;
+  box-sizing: border-box;
+  border: 2px, solid, white;
+  border-radius: 10px;
+  font-size: 18px;
+}
+
+legend {
+    background-color: #000;
+    color: #fff;
+    padding: 3px 6px;
+}
+
+.output {
+    font: 1rem 'Fira Sans', sans-serif;
+}
+
+label {
+    margin-top: 1rem;
+    display: block;
+    font-size: .8rem;
+}
+
+
+
+
 html,
 body {
     width: 100%;
