--- a/templates/post.html
+++ b/templates/post.html
@@ -54,10 +54,13 @@
       <legend> Post </legend>
         <div>
           <form method="post" >
-           Event Name: <input name=post_name />
-           Location: <input name=post_location  />
+          <b> Event Name: </b> <input name=post_name />
+        <b>   Location: </b><input name=post_location  />
             </br>
-              Event Description: <input name=post_event />
+              <b>Event Description: </b><textarea name=post_event width= "300px"
+                height= "44px"></textarea>
+  
+
           </br>
           <div>
             <label for="avatar"> Picture </label>
