--- a/templates/home.html
+++ b/templates/home.html
@@ -95,9 +95,10 @@
     	<!-- Contact Us -->
         <div class="contact">
         	<div class="container">
-				<h2 class="section-heading">Contact Us</h2>
-				<p> +1(23) 456 7890</p>
-				<p> info@example.com</p>
+				<h2 class="section-heading">About This Website</h2>
+				<p>Our app helps users find various community service activities nearby,
+          allows users to share their volunteer experience, and be able to see what other users have accomplished.</p>
+
         	</div>
         </div>
 
