--- a/templates/profile.html
+++ b/templates/profile.html
@@ -56,8 +56,15 @@
           </div>
       </section>
 
+
+    <section>
+      {{post_name}}
       <section>
-        {{post_date}}
+    <!--    {% for each_post in page%}
+        <ul> -->
+          {{post_date}}
+    <!--    </ul>
+        {%endfor%} -->
       </section>
 
     <footer class="page-footer">
