changes by lina

--- a/templates/home.html
+++ b/templates/home.html
@@ -80,7 +80,7 @@
                 <div class="col-sm-6">
                 	<h2 class="section-header">More people.</br>More impact.</h2>
                 	<p class="lead text-muted">We believe everyone should have the chance to make a difference. That's why we make it easy for good people and good causes to connect.</p>
-                	<a href="#" class="btn btn-primary btn-lg">Search for Opportunities</a>
+                	<a href="community" class="btn btn-primary btn-lg">Search for Opportunities</a>
                 </div>
 
             </div>
