--- a/css/custom.css
+++ b/css/custom.css
@@ -14,7 +14,7 @@ a {
 
 a:hover,
 a:focus {
-    color: forestgreen;
+    color: #525564;
 }
 
 p {
@@ -130,7 +130,7 @@ header .header-content .header-content-inner p {
 
 .page-footer .contact {
 	padding: 100px 0;
-	background-color: #0e4687;
+	background-color: #525564;
 	color: #fff;
 	}
 
