--- a/templates/profile.html
+++ b/templates/profile.html
@@ -44,7 +44,7 @@
           <div class="header-content">
               <div class="header-content-inner">
                   <h1>Hello {{user.nickname}}</h1>
-                  <!--<p>Name: {{user.nickname}}</p>-->
+                  <p>Name: {{user.nickname}}</p>
                   <p>Email: {{user.email}}</p>
               </div>
           </div>
@@ -57,14 +57,9 @@
       </section>
 
 
-    <section>
-      {{post_name}}
+
       <section>
-    <!--    {% for each_post in page%}
-        <ul> -->
           {{post_date}}
-    <!--    </ul>
-        {%endfor%} -->
       </section>
 
     <footer class="page-footer">
