--- a/templates/profile.html
+++ b/templates/profile.html
@@ -44,8 +44,8 @@
           <div class="header-content">
               <div class="header-content-inner">
                   <h1>Hello {{user.nickname}}</h1>
-                  <p>Name: {{user.nickname}}</p>
-                  <p>Email: {{user.email}}</p>
+                  <h3>Name: {{user.nickname}}</h3>
+                  <h3>Email: {{user.email}}</h3>
               </div>
           </div>
       </header>
