--- a/templates/profile.html
+++ b/templates/profile.html
@@ -93,6 +93,8 @@
   </br>
   Location: {{each_post.post_location}}
   </br>
+  {{each_post.image}}
+  </br>
   Description: {{each_post.post_event}}
   </p>
   {% endfor %}
