--- a/templates/post.html
+++ b/templates/post.html
@@ -59,17 +59,20 @@
             </br>
               <b>Event Description: </b><textarea name=post_event width= "300px"
                 height= "44px"></textarea>
-
-
+          </form>
           </br>
+
           <div>
-            
+            <form method="post" enctype="multipart/form-data">
             <label for="avatar"> Picture </label>
-            <input type="file" id="avatar" name="avatar"
+            <input type="file" id="avatar" name="image"
                 accept="image/png, image/jpeg" />
+            <button>Post</button>
+          </form>
           </div>
 
-              <button>Post</button>
+
+
         </fieldset>
 
 
