--- a/templates/friends.html
+++ b/templates/friends.html
@@ -48,6 +48,11 @@
           </div>
       </header>
 
+<!-- image and user -->
+  <img src="data:image/jpg;base64,{{profilepic}}" width="50px" height="50px"> <b> {{user.nickname}} </b> </br>
+<!-- -->
+
+
     <footer class="page-footer">
         <div class="small-print">
           <div class="container">
