--- a/templates/profile.html
+++ b/templates/profile.html
@@ -85,16 +85,38 @@
 
 
       <fieldset>
-        <img src="data:image/jpg;base64,{{profilepic}}" width="50px" height="50px"> <b> {{user.nickname}} </b>
         {% for each_post in post_list %}
-        <p>
-        <b>Event Name: </b> {{each_post.post_name}} </br>
-        <b>Location: </b> {{each_post.post_location}} </br>
-        <img src="data:image/jpg;base64,{{each_post.image}}" width="300px" height="300px"> </br>
-        <b>Description: </b> {{each_post.post_event}}
-        </p>
-        {% endfor %}
-      </section>
+
+        <div class="row1">
+          <!--<div class ="bigcolumn left"> -->
+              <div class="smallcolumn left1 ">
+                  <img src="data:image/jpg;base64,{{each_post.image}}" width="400px" height="300px"> </br>
+              </div>
+              <div class= "smallcolumn right1">
+                  <p>
+                    <b>Event Name: </b> {{each_post.post_name}} </br>
+                    <b>Location: </b> {{each_post.post_location}} </br>
+                    <b>Description: </b> {{each_post.post_event}}
+                  </p>
+              </div>
+          </div>
+        </div>
+
+        <!--    <div class ="bigcolumn right">
+                <div class="smallcolumn left2 ">
+                    <img src="data:image/jpg;base64,{{each_post.image}}" width="400px" height="300px"> </br>
+                </div>
+                <div class= "smallcolumn right2">
+                    <p>
+                      <b>Event Name: </b> {{each_post.post_name}} </br>
+                      <b>Location: </b> {{each_post.post_location}} </br>
+                      <b>Description: </b> {{each_post.post_event}}
+                    </p>
+                </div>
+            </div> -->
+      </div>
+    </br>
+      {% endfor %}
     </fieldset>
 
     <footer class="page-footer">
